[package]
name = "intcode_cli"
version = "0.1.0"
authors = ["Eric Groom <egroom@mail.sfsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { path = "../intcode_computer" }
intcode_assembler = { path = "../intcode_assembler" }
clap = "2.33.0"
